--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "countbot-server",
+  "name": "werewolves-server",
   "version": "0.4.0",
-  "description": "API app for countbot",
+  "description": "API app for werewolves",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
