--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "apollo-client": "^2.4.8",
     "apollo-link-http": "^1.5.9",
     "apollo-server": "^2.3.1",
-    "apollo-server-express": "^2.3.1",
+    "apollo-server-core": "^2.9.0",
+    "apollo-server-express": "^2.9.0",
     "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
